[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepresearch"
version = "1.0.0"
description = "AI-assisted OSINT research engine with pluggable AI providers and SerpApi"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests",
    "pydantic",
    "beautifulsoup4",
    "pypdf",
    "python-docx",
    "python-pptx",
    "openpyxl",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
